# FlexQueue-Dynamic-Distributed-Task-Scheduling

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  WLC.cpp  WLC.h  docker-compose.yml
detection_task/: CMakeLists.txt  face_detection.cpp
photos_readme/: diagram.json
proto/: distributionSystem.grpc.pb.cc  distributionSystem.grpc.pb.h  distributionSystem.pb.cc  distributionSystem.pb.h  distributionSystem.proto  distributionSystemService.grpc.pb.cc  distributionSystemService.grpc.pb.h  distributionSystemService.pb.cc  distributionSystemService.pb.h  distributionSystemService.proto
src/: async_client_node.cpp  async_client_node.h  async_node_client.h  async_server_node.cpp  async_server_node.h  client.cpp  client_on_server.cpp  server.cpp  testing.cpp
src/client/: async_client.cpp  async_client.h  async_client_node.cpp  async_client_node.h
src/client_on_server/: async_client_node.cpp  async_client_node.h
src/data_collection/: dataCollection.cpp  dataCollection.h  data_collection_server.cpp  data_collection_server.h  data_parsing_server.cpp  data_parsing_server.h  files_info.cpp  files_info.h  parsingServer.cpp  parsingServer.h
src/detection_task/: face_detection.cpp  face_detection.h
src/scheduling_algorithm/: WLC.cpp  WLC.h
src/server/: async_server_node.cpp  async_server_node.h  client.cpp
